<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.fotagmobile.MainActivity">

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear"
        android:title="@string/action_clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_load"
        android:title="@string/action_load"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_showall"
        android:title="@string/action_showall"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate1"
        android:title="@string/action_rate1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate2"
        android:title="@string/action_rate2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate3"
        android:title="@string/action_rate3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate4"
        android:title="@string/action_rate4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate5"
        android:title="@string/action_rate5"
        app:showAsAction="never" />
</menu>
